Aktualizacja funkcji losowania i całego jej mechanizmu, implementacja wznowienia gry i plików tekstowych, ekran końca gry, drobne poprawki w kodzie.
Aktualizacja stanu gry:
Przepisanie na nowo i dokończenie mechanizmu losowania elementów w grze.
Dodanie kategorii i danych dla wyborów.
Dodanie końcowego ekranu gry.
Dodanie opisów w menu pomocy.
Poprawa działania guzików menu w grze.
Dodanie opisów wylosowanych rzeczy.
Dodanie zapisu do plików.
Dodanie wznowienia gry.
Porządki w kodzie.

--- a/JpwpGame/JpwpGame.csproj
+++ b/JpwpGame/JpwpGame.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Koncowy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Koncowy.Designer.cs">
+      <DependentUpon>Koncowy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Koncowy.resx">
+      <DependentUpon>Koncowy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
